--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "asciiart-logo": "^0.2.6",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "gitignore": "^0.7.0",
     "inquirer": "^12.1.0",
     "pg": "^8.13.1",
-    "typescript": "^5.6.3",
-    "asciiart-logo": "^0.2.6"
+    "typescript": "^5.6.3"
   }
 }
